working donate button, pulls organization data

--- a/views/members.handlebars
+++ b/views/members.handlebars
@@ -26,6 +26,6 @@
     </div>
     <div class="row">
         <div class="orgList"></div>
-        <button id="donate" type="submit" class="btn btn-primary mb-2">Donate</button>
+        <button data-id="1" type="submit" class="btn btn-primary mb-2 donate">Donate</button>
     </div>
 </div>
