--- a/views/members.handlebars
+++ b/views/members.handlebars
@@ -26,6 +26,9 @@
     </div>
     <div class="row">
         <div class="orgList"></div>
-        <button data-id="1" type="submit" class="btn btn-primary mb-2 donate">Donate</button>
+        <button type="submit" class="btn btn-primary mb-2 impact">See Your Impact</button>
     </div>
 </div>
+
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+<script type="text/javascript" src="/js/members.js"></script>
