--- a/views/members.handlebars
+++ b/views/members.handlebars
@@ -1,45 +1,55 @@
-<nav class="navbar navbar-default">
-    <div class="container-fluid">
-        <div class="navbar-header">
-            <a class="navbar-brand" href="/logout">
-                Logout
-            </a>
-        </div>
-    </div>
-</nav>
+<link href="/stylesheets/members.css" rel="stylesheet">
+<header>
+    <div class="bold-name">OUR SAME KITCHEN</div>
+    <ul id="navigation">
+        <li class="nav-item"><a href="/logout">LOGOUT</a></li>
+    </ul>
+</header>
+
 <div class="container">
-    <div class="row">
-        <div class="col-md-6 col-md-offset-3">
-            <h2>Welcome <span class="member-name"></span></h2>
-        </div>
-        <form class="form-inline mealInput">
-            <div class="form-group mb-2">
-                <h3> How many meals would you like to donate?</h3>
+    <div class="form-section">
+        <div class="row">
+            <div class="col-md-12">
+                <h2 class="greeting">Welcome <span class="member-name"></span></h2>
             </div>
-            <br>
-            <div class="form-group mx-sm-3 mb-2">
+            <form class="form-inline mealInput">
+                <div class="col-md-12">
+                    <h3 class="greeting"> How many meals would you like to donate?</h3>
+                </div>
+                <br>
+        </div>
+        <div class="row">
+            <div class="form-group">
                 <label for="inputMealCount1" class="sr-only"></label>
                 <input type="mealCount" class="form-control" id="inputMealCount" placeholder="Meal count">
+
+                <div style="display: none" id="alert" class="alert alert-danger" role="alert">
+                    <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
+                    <span class="sr-only">Error:</span> <span class="msg1"></span>
+                </div>
+                <button type="submit" class="btn btn-primary mb-2 submit">Submit</button>
             </div>
-            <div style="display: none" id="alert" class="alert alert-danger" role="alert">
-                <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
-                <span class="sr-only">Error:</span> <span class="msg1"></span>
-            </div>
-            <button type="submit" class="btn btn-primary mb-2">Submit</button>
-        </form>
-    </div>
-    <!-- Calendly inline widget begin -->
-    <div class="row">
-        <div class="calendly-inline-widget" data-url="https://calendly.com/theunitedrhinos/60min"
-            style="min-width:320px;height:630px;">
+            </form>
         </div>
     </div>
-    <!-- Calendly inline widget end -->
-    <div>
-        <button type="submit" class="btn btn-primary mb-2 impact">See Your Impact</button>
+    <!-- Calendly inline widget begin -->
+    <div class="calendly-section">
+        <div class="row">
+            <h2 class="bold-question">When would you like your donation to be picked up?</h2>
+            <div class="calendly-inline-widget" data-url="https://calendly.com/theunitedrhinos/60min"
+                style="min-width:320px;height:630px;">
+            </div>
+        </div>
+
+        <!-- Calendly inline widget end -->
+        <div>
+            <button type="submit" class="btn btn-primary mb-2" id="impact">See Your Impact</button>
+        </div>
     </div>
 </div>
-</div>
+{{!-- </main> --}}
+<footer id="sticky-footer"><br></footer>
+
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <script type="text/javascript" src="/js/members.js"></script>
